# tiny_os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  linker.ld
bochs/conf/: bochsdbg-gdb.bxrc  bochsdbg-win.bxrc  bochsrc.bxrc
boot/: Cargo.toml  README.md  build.rs
boot/src/: loader.rs  logger.rs  main.rs  utility.rs
boot/src/asm/: int0x13.s  load.s  stage_1.s  stage_2_protected.s  stage_2_real.s  stage_3.s  vesa.S
boot/src/memory/: legacy_memory_region.rs  level_4_entries.rs  memory_descriptor.rs  mod.rs
boot_info/: Cargo.toml
boot_info/src/: lib.rs
kernel/: Cargo.toml  READMD.md  README.md
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/: READMD.md  README.md  main.rs
