[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9.0"
pic8259 = "0.10.0"
x86_64 = "0.14.10"
spinning_top = "0.2.4"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.1"
boot_info = { path = "../boot_info" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
conquer-once = { version = "0.3.2", default-features = false }